# miscellaneous

./: README.md
amr-nb/: CMakeLists.txt  amr-nb-wrapper.cc  amr-nb-wrapper.h  simulate-amr-nb.cc
amr-nb/c-code/: CMakeLists.txt  interf_dec.h  interf_enc.c  interf_enc.h  sp_dec.c  sp_dec.h  sp_enc.c  sp_enc.h  typedef.h
dereverb-gwpe/: CMakeLists.txt  apply-gwpe.cc
dereverb-gwpe/dereverb/: gwpe.cc  gwpe.h  spicax-eigen.h  wola.cc
g729-simulate/: CMakeLists.txt  simulate-g729.cc
g729-simulate/include/: decoder.h  encoder.h  testUtils.h
g729-simulate/src/: decoder.c  decoderTest.c  encoder.c  encoderTest.c  testUtils.c
gsm-efr/: CMakeLists.txt  gsm-efr-wrapper.cc  gsm-efr-wrapper.h  simulate-gsm-efr.cc
gsm-efr/c-code/: CMakeLists.txt  README.TXT  agc.c  autocorr.c  az_lsp.c  basic_op.h  basicop2.c  bits2prm.c  c1035pf.c  cnst.h  cod_12k2.c  codec.h  coder.c.back  convolve.c  copy.c  count.c  count.h  d1035pf.c  d_gains.c  d_homing.c  d_homing.h  d_plsf_5.c  dec_12k2.c  dec_lag6.c  decoder.c.back  dtx.c  dtx.h  e_homing.c  e_homing.h  ed_iface.c  enc_lag6.c  g_code.c  g_pitch.c  gains_tb.h  grid.tab  int_lpc.c  inter_6.c  inv_sqrt.c  inv_sqrt.tab  lag_wind.c  (+33 more)
